@@ -1,10 +1,9 @@
 package com.data.udh.utils;
 
-import sun.misc.BASE64Encoder;
+import cn.hutool.core.codec.Base64;
+import cn.hutool.core.io.FileUtil;
 
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.File;
 
 public class ImageUtil {
 
@@ -14,22 +13,16 @@ public class ImageUtil {
      * @return
      */
     public static String GetImageStr(String imgFile) {//将图片文件转化为字节数组字符串，并对其进行Base64编码处理
-        byte[] data = null;
-        //读取图片字节数组
-        try (InputStream in = new FileInputStream(imgFile);) {
-            data = new byte[in.available()];
-            in.read(data);
-        } catch (IOException e) {
-            e.printStackTrace();
-            return null;
-        }
-        //对字节数组Base64编码
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(data);//返回Base64编码过的字节数组字符串
+        // 读取图片文件
+        File imageFile = new File(imgFile);
+        // 将图片文件转换为 Base64 编码
+        String base64 = Base64.encode(FileUtil.readBytes(imageFile));
+        // 输出 Base64 编码
+        return base64;
     }
 
     public static void main(String[] args) {
-        System.out.println(GetImageStr("/Volumes/Samsung_T5/opensource/e-mapreduce/stack/UDH-1.0.0/hdfs/icons/danger1.png"));
+        System.out.println(GetImageStr("/Users/huzekang/openSource/e-mapreduce/cloudeon-stack/UDH-1.0.0/hdfs/icons/app.png"));;
     }
 
 }
